# ccdash

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md
apps/ccdash-ui/: Cargo.toml  tauri.conf.json
apps/ccdash-ui/capabilities/: default.json
apps/ccdash-ui/icons/: _generate.py  icon.icns
apps/ccdash-ui/src/: client_state.rs  commands.rs  event_bridge.rs  main.rs  pty.rs  screenshot.rs  window_clamp.rs  windows.rs
apps/ccdash-ui/ui/: index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
apps/ccdash-ui/ui/src/: App.svelte  app.html  main.ts
apps/ccdash-ui/ui/src/lib/: format.ts  keybinds.ts  projectActions.ts  reconnect.ts  stores.ts  tauri.ts  theme.css  theme.ts  toast.ts  urlDetect.ts  windowSync.ts
apps/ccdash-ui/ui/src/lib/components/: BrowserView.svelte  CommandPalette.svelte  EmptyState.svelte  LaunchDialog.svelte  Pane.svelte  PaneContainer.svelte  PlansView.svelte  PortsView.svelte  PromptsView.svelte  SessionsView.svelte  Sidebar.svelte  SidebarNav.svelte  Splitter.svelte  Terminal.svelte  WelcomeModal.svelte
apps/ccdash-ui/ui/src/routes/: +page.svelte
crates/ccdash-cli/: Cargo.toml
crates/ccdash-cli/src/: main.rs
crates/ccdash-cli/src/commands/: kill.rs  launch.rs  list.rs  mod.rs  plan.rs  ports.rs  project.rs  status.rs
crates/ccdash-cli/tests/: cli_smoke.rs
crates/ccdash-core/: Cargo.toml
crates/ccdash-core/src/: auth.rs  client.rs  domain.rs  lib.rs  paths.rs  protocol.rs
crates/ccdash-daemon/: Cargo.toml
crates/ccdash-daemon/src/: broadcast.rs  config.rs  main.rs  sessions.rs  state.rs  tmux.rs  worktrees.rs
crates/ccdash-daemon/src/plans/: mod.rs  parser.rs  watcher.rs
crates/ccdash-daemon/src/ports/: declared.rs  lsof.rs  mod.rs  registry.rs
crates/ccdash-daemon/src/projects/: mod.rs  registry.rs  scanner.rs
crates/ccdash-daemon/src/rpc/: codec.rs  dispatch.rs  handlers.rs  mod.rs  server.rs
crates/ccdash-daemon/tests/: broadcast.rs  handshake.rs  plans.rs  ports.rs  projects.rs  sessions.rs
crates/ccdash-daemon/tests/common/: mod.rs
docs/: ARCHITECTURE.md  GOAL.md  USAGE.md
docs/superpowers/: EXECUTION-LOG.md
docs/superpowers/plans/: 2026-05-17-browser-scope-and-panes.md  2026-05-17-phase-1-foundation.md  2026-05-17-phase-10-polish.md  2026-05-17-phase-2-cli-ports-plans.md  2026-05-17-phase-3-tauri-ui-shell.md  2026-05-17-phase-4-terminals-mirror.md  2026-05-17-phase-5-packaging.md  2026-05-17-phase-6-ui-parity.md  2026-05-17-phase-7-verify-polish.md  2026-05-17-phase-8-first-run.md  2026-05-17-phase-9-browser-preview.md  2026-05-17-prompts-library-and-sidebar-nav.md
docs/superpowers/specs/: 2026-05-17-browser-scope-and-panes-design.md  2026-05-17-cc-dashboard-design.md  2026-05-17-prompts-library-and-sidebar-nav-design.md
packaging/homebrew/Formula/: ccdash.rb
packaging/launchd/: com.ccdash.daemon.plist
packaging/linux/: Dockerfile.test
packaging/scripts/: install-service.sh  release.sh  uninstall-service.sh
packaging/systemd/: ccdash-daemon.service
