[workspace]
resolver = "2"
members = ["crates/ccdash-core", "crates/ccdash-daemon"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/cjtaylor/ccdash"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "signal", "process", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
notify = "6"
rand = "0.8"
regex = "1"
tempfile = "3"
