[package]
name = "ccdash-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ccdash-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
ccdash-core = { path = "../../crates/ccdash-core" }
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
portable-pty = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
