[package]
name = "ccdash-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ccdash"
path = "src/main.rs"

[dependencies]
ccdash-core = { path = "../ccdash-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
ccdash-daemon = { path = "../ccdash-daemon" }
tempfile = { workspace = true }
