[package]
name = "ccdash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
