[package]
name = "ccdash-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ccdash-daemon"
path = "src/main.rs"

[dependencies]
ccdash-core = { path = "../ccdash-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
